Added Malaysia and Thailand

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,12 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#malaysia {
+ background-color: #00FF00;
+}
+
+#thailand {
+ background-color: #0000FF;
+}
+
